--- a/index.html/index.html
+++ b/index.html/index.html
@@ -7,6 +7,11 @@
     <link rel="styleheet"  href="style.css">
 </head>
 <body>
-    
+    <section class="principal">
+    <section class="container principal">
+    <h1>Com o combo+, você pode aproveitar a Alura+ e o Alura lingua por um preço único</h1>
+    <img src="./img/image.png" alt="o combo+ é a junção do Alura+ e o Alura lingua">
+    </section>
+    </section>
 </body>
 </html>
