--- a/index.html/index.html
+++ b/index.html/index.html
@@ -11,7 +11,8 @@
     <section class="container principal">
     <h1>Com o combo+, você pode aproveitar a Alura+ e o Alura lingua por um preço único</h1>
     <img src="./img/image.png" alt="o combo+ é a junção do Alura+ e o Alura lingua">
-    </section>
+<a href="www,alura.com.br" class="container-botao">Assine por 12x de R$120,00*</a>
+</section>
     </section>
 </body>
 </html>
