--- a/index.html/index.html
+++ b/index.html/index.html
@@ -9,9 +9,13 @@
 <body>
     <section class="principal">
     <section class="container principal">
+        <div>
     <h1>Com o combo+, você pode aproveitar a Alura+ e o Alura lingua por um preço único</h1>
     <img src="./img/image.png" alt="o combo+ é a junção do Alura+ e o Alura lingua">
-<a href="www,alura.com.br" class="container-botao">Assine por 12x de R$120,00*</a>
+ <a href="www,alura.com.br" class="container-botao">Assine por 12x de R$120,00*</a>
+<a href="www.alura.com.br" class="container-botao botao-secundario ">Assinar somente o Alura+</a>
+<p class="container-aviso">*O preço pode variar caso a assinatura seja feita em outros planos</p>
+</div>
 </section>
     </section>
 </body>
