--- a/index.html/index.html
+++ b/index.html/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alura Plus</title>
     <link rel="styleheet"  href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="principal">
     <section class="container principal">
         <div>
-    <h1>Com o combo+, você pode aproveitar a Alura+ e o Alura lingua por um preço único</h1>
+    <h1 class="container-titulo">Com o combo+, você pode aproveitar a Alura+ e o Alura lingua por um preço único</h1>
     <img src="./img/image.png" alt="o combo+ é a junção do Alura+ e o Alura lingua">
  <a href="www,alura.com.br" class="container-botao">Assine por 12x de R$120,00*</a>
 <a href="www.alura.com.br" class="container-botao botao-secundario ">Assinar somente o Alura+</a>
